# session-sync

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
convex/: activity.ts  config.ts  crons.ts  inviteHelpers.ts  invites.ts  machines.ts  presignedUrls.ts  schema.ts  sessions.ts  users.ts  versions.ts
docs/prds/001-r2-desktop-sync/: 01-problem-and-solution.md  02-sync-model.md  03-architecture.md  04-tech-stack.md  05-ui-spec.md  06-pro-tools.md  07-sync-engine.md  08-implementation-phases.md  09-decisions-log.md  10-risks-and-future.md  PROGRESS.md  README.md  TEST-PLAN.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  error.rs  events.rs  ignore.rs  keychain.rs  lib.rs  main.rs
src-tauri/src/r2/: download.rs  mod.rs  trash.rs  upload.rs
src-tauri/src/state/: db.rs  mod.rs  models.rs
src-tauri/src/sync_engine/: checkout.rs  hasher.rs  mod.rs  scanner.rs  versioner.rs  wal.rs  watcher.rs
src/components/: ActivityFeed.tsx  MenuBarPanel.tsx  PullProgress.tsx  ReleaseDialog.tsx  SessionCard.tsx  Settings.tsx  SetupWizard.tsx  SyncBacklog.tsx  VersionHistory.tsx
src/hooks/: useConvex.ts  useTauriEvents.ts
src/lib/: commands.ts
src/lib/convex/: index.ts
